h1-h6 have hidden padding that's what caused the alignment issues. so changed all of them to <div> and made changes in css to get the look right

--- a/mockup1/style.css
+++ b/mockup1/style.css
@@ -1,8 +1,8 @@
-
+/*
 * {
     border: 1px solid red !important;
 }
-
+*/
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -28,8 +28,7 @@
 .row2{
 	width: 50%;
 	display: flex;
-	align-items: right;
-	flex-direction: column;
+    flex-direction: column;
 }
 .center {
     display: block;
@@ -58,14 +57,24 @@
 .col-5 {
     width: 41.66%;
     text-align: right;
+    font-size: 150%;
+    font-weight: 400;
+    margin-left: 48%;
 }
 
 .col-6 {
     width: 50%;
     text-align: right;
-    padding: 20px;
-    font-size: 300%;
-    font-weight: 300;
+    font-size: 350%;
+    font-weight: 100;
+    margin-left: 40%;
+    margin-top: 5%;
+}
+
+.logo {
+    width: 50%;
+    padding-left: 20px;
+    padding-top: 20px;
 }
 
 .col-7 {
@@ -90,7 +99,16 @@
 
 .col-12 {
     width: 100%;
+    padding-top: 20px;
+
+}
+
+.work {
+    width: 100%;
     text-align: left;
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
     color: #BCBBBB;
+    font-weight: 400;
+    font-size: 180%;
 }
